--- a/.env.production.example
+++ b/.env.production.example
@@ -13,11 +13,11 @@ LOG_LEVEL=error
 
 # Database Configuration
 DB_CONNECTION=mysql
-DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=your_database_name
-DB_USERNAME=your_database_user
-DB_PASSWORD=your_database_password
+DB_HOST=localhost
+DB_DATABASE=yufagenc_kasir
+DB_USERNAME=yufagenc_kasiryufatek
+DB_PASSWORD="yufagenc_kasiryufatek"
 
 # Broadcasting
 BROADCAST_DRIVER=log
